# identman

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: identman.yml
config/: config.yaml
docker/fastapi/: Dockerfile
docker/frontend/: Dockerfile
frontend/: index.html  manifest.json  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  Help.tsx  LaguageSelector.tsx  Legal.tsx  index.css  main.tsx  translation.ts
frontend/src/api/: api.ts  helpers.ts
frontend/src/locales/: de.json  en.json
identman/: __init__.py  app.py  main.py
identman/blueprints/: __init__.py
identman/helper/: api.py  csrf.py  decryption.py  helpers.py  settings.py
identman/identman/: api.py  csrf.py  decryption.py  helpers.py
identman/templates/: index.html
