[tool.poetry]
name = "identman"
version = "0.1.0"
description = ""
authors = ["Alex <robokatze182@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
argon2-cffi = "^23.1.0"
crypto = "^1.4.1"
cryptography = "^45.0.3"
flask = "^3.1.1"
flask-cors = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
