[project]
name = "identman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "crypto>=1.4.1",
    "cryptography>=45.0.7",
    "fastapi>=0.116.1",
    "fastapi-csrf-protect>=1.0.6",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
[dependency-groups]
prod = [
    "uvicorn-worker>=0.4.0",
    "gunicorn>=23.0.0"
]
